{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 9,
  "lineage": "c3953fcf-f743-b9ee-8dfb-00d39035ebd2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:058135280735:instance/i-0abd680b76ac9f062",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abd680b76ac9f062",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bootcamp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0d8d3c21b88c067",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-54-236-222-52.compute-1.amazonaws.com",
            "public_ip": "54.236.222.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039c021ae3a2ccf2d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ca41396f7d22038",
            "tags": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-web",
              "Project": "phase-2-tf-ec2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-web",
              "Project": "phase-2-tf-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c43a44bbc4709427"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.pub_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058135280735:internet-gateway/igw-01412d02166822980",
            "id": "igw-01412d02166822980",
            "owner_id": "058135280735",
            "tags": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-igw",
              "Project": "phase-2-tf-ec2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-igw",
              "Project": "phase-2-tf-ec2"
            },
            "vpc_id": "vpc-0691a3ee4e7ae4e47"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01412d02166822980",
            "id": "r-rtb-07160d864585789971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07160d86458578997",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058135280735:route-table/rtb-07160d86458578997",
            "id": "rtb-07160d86458578997",
            "owner_id": "058135280735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-rt-public",
              "Project": "phase-2-tf-ec2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-rt-public",
              "Project": "phase-2-tf-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0691a3ee4e7ae4e47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad6285a9f5700be5",
            "route_table_id": "rtb-07160d86458578997",
            "subnet_id": "subnet-01ca41396f7d22038"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058135280735:security-group/sg-0c43a44bbc4709427",
            "description": "PUB SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c43a44bbc4709427",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "phase-2-tf-ec2-dev-pub-sg",
            "name_prefix": "",
            "owner_id": "058135280735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-pub-sg",
              "Project": "phase-2-tf-ec2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-pub-sg",
              "Project": "phase-2-tf-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0691a3ee4e7ae4e47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058135280735:subnet/subnet-01ca41396f7d22038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca41396f7d22038",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058135280735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-pub-a",
              "Project": "phase-2-tf-ec2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-pub-a",
              "Project": "phase-2-tf-ec2"
            },
            "vpc_id": "vpc-0691a3ee4e7ae4e47"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058135280735:vpc/vpc-0691a3ee4e7ae4e47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e31c1305f5d58a6e",
            "default_route_table_id": "rtb-0eb138b9080e453bf",
            "default_security_group_id": "sg-003ba7470f68438a2",
            "dhcp_options_id": "dopt-0d00472e809f686cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0691a3ee4e7ae4e47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb138b9080e453bf",
            "owner_id": "058135280735",
            "tags": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-vpc",
              "Project": "phase-2-tf-ec2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "phase-2-tf-ec2-dev-vpc",
              "Project": "phase-2-tf-ec2"
            }
          }
        }
      ]
    }
  ]
}